--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
 <html>
-<script src="./script.js"></script>
+  <body>
+    <label>FEN:</label><input type="text" id="fen" />
+  <script src="./script.js"></script>
+  </body>
 </html>
