--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <label>FEN:</label><input type="text" id="fen" />
+    <div id="board" />
   <script src="./script.js"></script>
   </body>
 </html>
