misc: add pgn comment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <container>
       <div id="board"></div>
       <div id="side">
-        <textarea id="pgn"></textarea>
+        <textarea id="pgn">{ Insert PGN here }</textarea>
         <button id="loadPgn">Load</button>
       </div>
     </container>
