--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <style>
-      container { display: flex; }
-      #top { margin-top: 1rem; display: block; }
-      #board { width: 40%; display: flex; flex-wrap: wrap; margin-top: 1rem; }
+      container { display: flex; flex-wrap: wrap; }
+      body { margin: 1rem; }
+      #board { width: 100%; display: flex; flex-wrap: wrap; margin-top: 1rem; }
       #load { margin-left: 0.5rem; }
-      #side { padding: 1rem; width: 25%; }
-      #loadPgn { display: block; }
-      #pgn { width: 100%; height: 80%; }
+      #top { margin-top: 2rem; display: block; width: 100%; font-size: 3vw; }
+      #side { width: 100%; margin-top: 1rem; }
+      #loadPgn { display: block; font-size: 3vw; }
+      #load { font-size: 3vw; }
+      #fen { width: auto; font-size: 3vw; }
+      #pgn { width: 100%; height: 80%; font-size: 3vw; }
+
+      @media screen and (min-width: 768px) {
+        #board { width: 50%; }
+        #top { font-size: 1rem; margin-top: 1rem; }
+        #fen { font-size: 1rem; }
+        #load { font-size: 1rem; }
+        #side { width: 40%; padding-left: 1rem; }
+        #pgn { font-size: 1rem; }
+        #loadPgn { font-size: 1rem; }
+      }
+
+      @media screen and (min-width: 1440px) {
+        #board { width: 40%; }
+      }
+
       .square { flex-basis: 12.5%; border: 2px solid rgba(0,0,0,0.1); box-sizing: border-box; position: relative; }
       #board .influence { border: 2px solid black; }
       #board .hovered { border: 2px solid chartreuse; }
       .square:after { content: ""; display: block; padding-bottom: 100%; pointer-events: none; }
-      .square .piece { top: 0.8rem; left: 0; bottom: 0; right: 0; text-align: center; font-size: 3rem; position: absolute; line-height: 100%; pointer-events: none; }
+      .square .piece { top: 50%; left: 50%; text-align: left;
+        font-size: 3rem; position: absolute; line-height: 100%; pointer-events: none;
+        transform: translate(-50% , -50%); }
       .square .control { top: 0; left: 0; bottom: 0; right: 0; font-size: 1rem; position: absolute; line-height: 100%; display: none; }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
