misc: try setting the font family

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <style>
       container { display: flex; flex-wrap: wrap; }
-      body { margin: 1rem; }
+      body { margin: 1rem; font-family: 'Helvetica'; }
       #board { width: 100%; display: flex; flex-wrap: wrap; margin-top: 1rem; }
       #load { margin-left: 0.5rem; }
       #top { margin-top: 2rem; display: block; width: 100%; font-size: 3vw; }
