--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       #loadPgn { display: block; font-size: 3vw; }
       #load { font-size: 3vw; }
       #fen { width: auto; font-size: 3vw; }
-      #pgn { width: 100%; height: 80%; font-size: 3vw; }
+      #pgn { width: 100%; height: 80%; font-size: 3vw; box-sizing: border-box; }
 
       @media screen and (min-width: 768px) {
         #board { width: 50%; }
