misc: refactor code for better readability

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         #side { width: 40%; padding-left: 1rem; }
         #pgn { font-size: 1rem; }
         #loadPgn { font-size: 1rem; }
-
       }
 
       @media screen and (min-width: 1024px) {
@@ -31,22 +30,33 @@
         svg { transform: scale(1); }
       }
 
-      .square { flex-basis: 12.5%; border: 2px solid rgba(0,0,0,0.1); box-sizing: border-box; position: relative; }
+      .square { flex-basis: 12.5%; border: 2px solid rgba(0,0,0,0.1);
+        box-sizing: border-box; position: relative; }
       #board .influence { border: 2px solid black; }
       #board .hovered { border: 2px solid chartreuse; }
-      .square:after { content: ""; display: block; padding-bottom: 100%; pointer-events: none; }
+      .square:after { content: ""; display: block; padding-bottom: 100%;
+        pointer-events: none; }
       .square .piece { top: 50%; left: 50%;
         position: absolute; line-height: 100%; pointer-events: none;
         transform: translate(-50% , -50%); }
-      .square .control { top: 0; left: 0; bottom: 0; right: 0; font-size: 1rem; position: absolute; line-height: 100%; display: none; }
+      .square .control { top: 0; left: 0; bottom: 0; right: 0; font-size: 1rem;
+        position: absolute; line-height: 100%; display: none; }
+      .darkener { background: rgba(0,0,0,0.08); position: absolute; top: 0;
+        left: 0; bottom: 0; right: 0; pointer-events: none; }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"
+            integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="./svgs.js"></script>
   </head>
   <body>
+
     <div id="top">
       <label>FEN:</label><input type="text" id="fen" /><button id="load">Load</button>
     </div>
+
     <container>
       <div id="board"></div>
       <div id="side">
@@ -54,6 +64,7 @@
         <button id="loadPgn">Load</button>
       </div>
     </container>
-  <script src="./script.js"></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
